tests/rosetta/out/Java/call-an-object-method-1.error
javac: exit status 1
/tmp/CallAnObjectMethod1.java:9: error: cannot find symbol
        myValue.ValueMethod(0);
               ^
  symbol:   method ValueMethod(int)
  location: variable myValue of type Foo
/tmp/CallAnObjectMethod1.java:10: error: cannot find symbol
        myPointer.PointerMethod(0);
                 ^
  symbol:   method PointerMethod(int)
  location: variable myPointer of type Foo
/tmp/CallAnObjectMethod1.java:11: error: cannot find symbol
        myPointer.ValueMethod(0);
                 ^
  symbol:   method ValueMethod(int)
  location: variable myPointer of type Foo
/tmp/CallAnObjectMethod1.java:12: error: cannot find symbol
        myValue.PointerMethod(0);
               ^
  symbol:   method PointerMethod(int)
  location: variable myValue of type Foo
/tmp/CallAnObjectMethod1.java:13: error: cannot find symbol
        myValue.ValueMethod(0);
               ^
  symbol:   method ValueMethod(int)
  location: variable myValue of type Foo
/tmp/CallAnObjectMethod1.java:14: error: cannot find symbol
        myPointer.PointerMethod(0);
                 ^
  symbol:   method PointerMethod(int)
  location: variable myPointer of type Foo
6 errors
