tests/rosetta/out/Java/call-an-object-method-1.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:11:06Z
// call-an-object-method-1.mochi
class Foo {
}
public class CallAnObjectMethod1 {
    public static void main(String[] args) {
    Foo myValue = new Foo();
    Foo myPointer = new Foo();
    myValue.ValueMethod(0);
    myPointer.PointerMethod(0);
    myPointer.ValueMethod(0);
    myValue.PointerMethod(0);
    myValue.ValueMethod(0);
    myPointer.PointerMethod(0);
    }
}
